--- a/new_project.css
+++ b/new_project.css
@@ -1,5 +1,34 @@
-div{
-    font-size: larger;
-    font-weight: bold;
-    color: red;
+.border-bottom{
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    box-shadow:0px 1px 3px 0px rgba(0, 0, 0, .1);
+}
+
+.flex-box{
+    display: flex;
+    align-items: center;
+}
+
+.header{
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+.icon{
+    width: 50px;
+    height: 50px;
+}
+.p_10{
+    padding: 10px;
+}
+._ml-auto{
+    margin-left: auto !important;
+}
+.sec{
+    
+    width: 100%;
+    height: 200px;
+}
+.sec1{
+    width: 100%;
+    height: 200px;
 }
