--- a/new_project.css
+++ b/new_project.css
@@ -1,34 +1,49 @@
-.border-bottom{
-    border-bottom: 1px solid rgba(0, 0, 0, .1);
-    box-shadow:0px 1px 3px 0px rgba(0, 0, 0, .1);
+body {
+    margin: 0px !important;
 }
 
-.flex-box{
+.border-bottom {
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, .1);
+}
+
+.flex-box {
     display: flex;
     align-items: center;
 }
 
-.header{
+.header {
     display: flex;
     align-items: center;
     padding: 10px;
+    background: white;
+    position: sticky;
+    top: 0px;
 }
-.icon{
+
+.icon {
     width: 50px;
     height: 50px;
 }
-.p_10{
+
+.p_10 {
     padding: 10px;
 }
-._ml-auto{
+
+._ml-auto {
     margin-left: auto !important;
 }
-.sec{
-    
+
+.sec {
     width: 100%;
     height: 200px;
 }
-.sec1{
+
+.sec1 {
     width: 100%;
-    height: 200px;
+    height: 285px;
+    background-image: url('assets/imgs/munnar-4796051_960_720.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-y: top;
 }
